<resources>

    <string name="your_email">Your Email</string>
    <string name="title_activity_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="leave_categories">
        <item>Select Category</item>
        <item>Sick Leave</item>
        <item>Annual Leave</item>
        <item>Emergency Leave</item>
        <item>Unpaid Leave</item>
    </string-array>

    <string-array name="document_types">
        <item>Employment Contract</item>
        <item>Work Certificate (Attestation de Travail)</item>
        <item>Payslip</item>
        <item>Experience Letter</item>
        <item>End-of-Contract Certificate</item>
        <item>CNSS Declaration</item>
    </string-array>
    <string name="applicants">Applicants</string>
    <string name="no_applicants">No applicants found for this position</string>
    <string name="close">Close</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="apply_now">Apply</string>
    <string name="cancel_application_title">Cancel application?</string>
    <string name="cancel_application_message">Are you sure you want to cancel your application for this job?</string>
    <string name="error_not_authenticated">You need to login before performing this action.</string>
    <string name="application_canceled_success">Application canceled</string>
    <string name="failed">Failed</string>
    <string name="doctor_management">Doctor Management</string>
    <string name="search_doctors">Search doctors…</string>
    <string name="no_doctors_found">No Doctors Found</string>
    <string name="no_doctors_available_desc">There are no doctors available at the moment. Add a new doctor to get started.</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="previous">Previous</string>
    <string name="select_department_prompt">Select a department</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_visits_available">No medical visits available</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Job Actions -->
    <string name="finish_job_title">Finish Job</string>
    <string name="finish_job_message">Are you sure you want to mark this job as finished? This will close the position.</string>
    <string name="delete_job_title">Delete Job</string>
    <string name="delete_job_message">Are you sure you want to delete this job? This action cannot be undone.</string>
    <string name="finish">Finish</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Success Messages -->
    <string name="job_finished_success">Job marked as finished</string>
    <string name="job_deleted_success">Job deleted successfully</string>
    <string name="job_updated_success">Job updated successfully</string>

    <!-- Error Messages -->
    <string name="error_unauthorized">Please log in again to continue</string>
    <string name="error_forbidden">You do not have permission to perform this action</string>
    <string name="error_not_found">The requested job was not found</string>
    <string name="error_generic">Something went wrong. Please try again.</string>
    <string name="error_timeout">Request timed out. Please check your connection.</string>
    <string name="error_no_internet">No internet connection available</string>
    <string name="error_network">Network error. Please try again.</string>
    <!-- Training Fragment Strings -->
    <string name="add_training">Add Training</string>
    <string name="department">Department</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="submit_training">Submit Training</string>
    <string name="training_description">Training Description</string>
    <string name="training_title">Training Title</string>
    <string name="no_date_range_selected">No date range selected</string>

    <!-- Candidates sorting -->
    <string name="candidate_sort_newest">Newest first</string>
    <string name="candidate_sort_oldest">Oldest first</string>
    <string-array name="candidate_sort_options">
        <item>@string/candidate_sort_newest</item>
        <item>@string/candidate_sort_oldest</item>
    </string-array>

    <string name="employee_avatar">Employee avatar</string>
    <string name="leave_date_range">Leave date range</string>
    <string name="document_request_title"> My Document </string>

    <!-- Available Jobs Filters -->
    <string name="filters">Filters</string>
    <string name="toggle_filters">Toggle filters</string>
    <string name="reset_filters">Reset filters</string>
    <string name="search_hint_jobs">Search title, department, description, skills…</string>
    <string name="department_hint">Department</string>
    <string name="department_all_hint">All departments</string>
    <string name="experience_all">All levels</string>
    <string name="experience_junior">Junior</string>
    <string name="experience_mid">Mid</string>
    <string name="experience_senior">Senior</string>
    <string name="status_all">All status</string>
    <string name="status_open">Open</string>
    <string name="status_finished">Finished</string>
</resources>